# TestModernCppStarter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: standalone.yml
all/: CMakeLists.txt
documentation/: CMakeLists.txt
include/testmoderncppstarter/: testmoderncppstarter.h
source/: testmoderncppstarter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: cli11_test.cpp  main_catch2.cpp  testmoderncppstarter.cpp
